Equacions de primer grau afegides

--- a/index.html
+++ b/index.html
@@ -45,11 +45,16 @@
     </section>
 
     <section class="procediment">
+        <article>
+            <h2>Procediment</h2>
+            <p id="procediment">Aquí apareixerà el procediment.</p>
+        </article>
 
     </section>
 
 
     <script src="principal.js" defer></script>
+    <script src="/resolucio/resoldre.js" type="module" defer></script>
     <script src="estils_equacio/estils_equacio_principal.js" type='module' defer></script>
 </body>
 </html>
