S'han afegit canvis a l'apartat "ajuda"

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <!-- L'apartat amb l'ajuda -->
         <article class="ajuda" id="seccio-ajuda">
             <h2>Ajuda</h2>
+            <p>Per escriure una fracció, s'ha de fer clic al botó "/"</p>
             <p>
                 Per escriure el símbol d'elevat amb el teclat cal mantenir el botó
                 "shift" del teclat a la vegada que es prem el botó amb un accent
