s'han realitzat petits canvis

--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
         <!-- L'apartat amb l'ajuda -->
         <article class="ajuda" id="seccio-ajuda">
             <h2>Ajuda</h2>
-            <p>Per escriure una fracció, s'ha de fer clic al botó "/".</p>
+            <p>Per escriure una fracció, s'ha de prémer la tecla "/".</p>
             <p>
-                Per escriure el símbol d'elevat amb el teclat cal mantenir el botó
-                "shift" del teclat a la vegada que es prem el botó amb un accent
-                circumflex (^). En mòbils o tauletes s'ha de apretar dues vegades
-                el botó d'accent circumflex.
+                Per escriure un nombre o una incògnita elevada 
+                a un altre nombre, cal prémer la tecla "e". Posteriorment
+                s'haurà d'escriure la base i l'exponent.
             </p>
 
             <p>
